[main] Запросы в ml перенесены за spring boot
